--- a/Tex/introduction.tex
+++ b/Tex/introduction.tex
@@ -2,7 +2,7 @@
 
 MicroBooNE (Micro Booster Neutrino Experiment) is an experiment based at the Fermi National Accelerator Laboratory (Fermilab) that uses a large Liquid Argon Time Projection Chamber (LArTPC) to investigate the excess of low energy events observed by the MiniBooNE experiment \cite{Aguilar-Arevalo:2013pmq} and to study neutrino-argon cross-sections. MicroBooNE is part of the Short-Baseline Neutrino (SBN) physics program, along with two other LArTPCs: the Short Baseline Near Detector (SBND) and the Imaging Cosmic And Rare Underground Signal (ICARUS) detector. {\ub} also provides important research and development in terms of detector technology and event reconstruction techniques for future LArTPC experiments includine DUNE (Deep Underground Neutrino Experiment).\\
 
-\begin{figure}[h!]
+\begin{figure}[ht!]
 \centering
 	\includegraphics[width=0.4\linewidth]{Figures/detector2.png} \\
 \caption{\textit{A diagram of the time projection chamber of the MicroBooNE detector \cite{lartpc}.}}\label{detector_fig}
@@ -31,7 +31,7 @@ The phenomenon of multiple coulomb scattering (MCS) occurs when a charged partic
 
 \noindent where $\beta$ is the ratio of the particle's velocity to the speed of light, $\ell$ is the distance traveled inside the material, and $X_0$ is the radiation length of the target material (taken to be a constant 14 cm in liquid argon). With the Highland formula, the momentum of a track-like particle can be determined using only the 3D reconstructed track it produces in the detector, without any calorimetric information. The method by which this is done is described in detail in Section \ref{MCS_technique_section}.
 
-\begin{figure}[h!]
+\begin{figure}[ht!]
 \centering
 	\includegraphics[width=0.5\linewidth]{Figures/mcs_nocap.png} \\
 \caption{\textit{The particle's trajectory is deflected as it traverses through the material \cite{leonidas1}.}}\label{mcs_nocap_fig}
