--- a/Tex/bibliography.tex
+++ b/Tex/bibliography.tex
@@ -2,6 +2,21 @@
 
   \bibitem{PDG_spline_table} Table 289: Muons in Liquid argon (Ar) \url{http://pdg.lbl.gov/2012/AtomicNuclearProperties/MUON_ELOSS_TABLES/muonloss_289.pdf}
 
+%\cite{Marshall:2015rfa}
+\bibitem{Marshall:2015rfa} 
+  J.~S.~Marshall and M.~A.~Thomson,
+  %``The Pandora Software Development Kit for Pattern Recognition,''
+  Eur.\ Phys.\ J.\ C {\bf 75}, no. 9, 439 (2015)
+  doi:10.1140/epjc/s10052-015-3659-3
+  [arXiv:1506.05348 [physics.data-an]].
+
+  \bibitem{MIPenergysource}
+  D. E. Groom, N. V. Mokhov and S. Striganov, ``Muon Stopping Power and Range Tables: 10 MeV - 100 TeV'' Table 5
+  \url{http://pdg.lbl.gov/2012/AtomicNuclearProperties/adndt.pdf}
+  
+  %%CITATION = doi:10.1140/epjc/s10052-015-3659-3;%%
+  %6 citations counted in INSPIRE as of 19 Nov 2016
+
   % \bibitem{MB_lee_paper} Unexplained Excess of Electron-Like Events From a 1-GeV Neutrino Beam \url{http://arxiv.org/pdf/0812.2243v2.pdf} %1
   
   % \bibitem{UB_webpage} MicroBooNE Public Webpage \url{http://www-microboone.fnal.gov/} %2
